Fixed scrolling text and did some testing to try to not have horizontal scroll on calendar

--- a/test_extensions/calendar.css
+++ b/test_extensions/calendar.css
@@ -18,7 +18,7 @@
   color: #247BA0;
 }
 #weekdays div {
-  width: 100px;
+  width: 89px;
   padding: 10px;
 }
 #calendar {
@@ -29,7 +29,7 @@
 }
 .day {
   width: 100px;
-  padding: 10px;
+  padding: 5px;
   height: 100px;
   cursor: pointer;
   box-sizing: border-box;
@@ -43,7 +43,7 @@
 
 .day .padding {
   background-color: #ffe6a1;
-  border-radius: 20px;
+  border-radius: 10px;
   border-color: black;
   border-style: fixed;
 }
